# ChangeLog for sys-kernel/dracut
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.19 2011/03/29 16:40:11 aidecoe Exp $

  29 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
  -files/dracut-002-add-missing-functions.patch,
  -files/dracut-002-custom-paths.patch, -files/dracut-002-dir-symlinks.patch,
  -files/dracut-002-gencmdline-check-for-keyboard-i18n-files.patch,
  -files/dracut-002-makefile-add-with_switch_root.patch,
  -files/dracut-002-unmount.patch,
  -files/dracut-006-console_init-not-necessary.patch,
  -files/dracut-006-dhcp6.patch, -files/dracut-006-dm-udev-rules.patch,
  -files/dracut-006-lc-all-c.patch:
  Removed patches of not existing ebuilds.

  29 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> -dracut-002-r1.ebuild,
  -dracut-003.ebuild, -dracut-004.ebuild, -dracut-006.ebuild,
  -dracut-006-r1.ebuild, -dracut-009.ebuild, metadata.xml:
  Removed ancient versions and broken dracut-009.ebuild.

*dracut-009-r1 (29 Mar 2011)

  29 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> +dracut-009-r1.ebuild:
  Not removing 97biosdevname module anymore.

*dracut-009 (28 Mar 2011)

  28 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> +dracut-009.ebuild,
  +files/dracut-009-don-t-skip-zero-length-string-outfile.patch,
  +files/dracut-009-multipath-udev-rules.patch:
  Version bump.

  This version provides new modules:
  - biosdevname
  - caps

  sys-block/open-iscsi is restricted to 2.0.871.3 and above because of required
  iBFT support which starts with this version.

  net-misc/dhcp restricted to 4.2.1-r1 and above because dhcp-3 doesn't work
  with Qemu and dhcp-4 is already ~arch keyworded.

  21 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-002-r1.ebuild,
  dracut-003.ebuild, dracut-004.ebuild, dracut-006.ebuild,
  dracut-006-r1.ebuild, dracut-007.ebuild, dracut-008.ebuild,
  dracut-008-r1.ebuild:
  Tests are restricted for all ebuilds. See bug #298014.
