@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX dracut-007-dm-udev-rules.patch 2048 RMD160 20bb37d057b58a523a5bc28fb69fc3b9c231370c SHA1 867ada86c0949106d5b18c69b9e52dbd3cf28e97 SHA256 690a85d5623e673cb43d228ecf4c669bb9e231ec4fd197dac8d66f957eaa98f6
 AUX dracut-007-multipath-udev-rules.patch 1327 RMD160 616179d21a205b477e729e15b074380432b1154c SHA1 08e20308f983574cb52f567de7fe85d5df61a1e1 SHA256 2df06515c59fe64a461f63444793ae1af287b46be9ddd61f3310f6a87ad830f0
@@ -11,20 +11,16 @@ AUX dracut-009-multipath-udev-rules.patch 848 RMD160 99527326b1c5c33647a750d4bba
 DIST dracut-007.tar.bz2 99629 RMD160 5bb9d1e89e3d7b3a024369eecb594e71a359778d SHA1 38f2e74f127f682eac4dc7da30ee0ea8debfff1f SHA256 6d58778bcf24b46c82cc72c7d6f5cc1e7bac7f3f9c33aa542052583bd00d20e1
 DIST dracut-008.tar.bz2 136218 RMD160 2804a92c99539c19af54f256da2ceca34cff110a SHA1 7a3d3133ee52d824f11c9b2ccfca56fb983bda81 SHA256 f0cb0e022064c5b2fe02af9906f19ad77000d5f1813fe6cd57b037aaee921d31
 DIST dracut-009.tar.bz2 143623 RMD160 bf9126fd1310f74bf78917f8ea374ded15e7359c SHA1 4b8efde1ac7e82d740873f051309b1fc946a21c4 SHA256 791b4167f78e5c553bdd4165f4753bbe54a3662d90fc7ef695dd15c5c95f68c7
-EBUILD dracut-007.ebuild 4816 RMD160 3812816e7d41a564f124a4ce6b8d171cfc5060c3 SHA1 783cf18f6c110881512332120c853f74e760ce71 SHA256 9e45d69f1ab6304c07401739b6c3e027281fd87a41d95293981772f701b7d72f
-EBUILD dracut-008-r1.ebuild 5831 RMD160 0db8d18a0387c4769e652080f955e03be6364f70 SHA1 f214b1dc8c8e80021af73ef6f06460f99084027f SHA256 063807d219e84f1ec2f3b8af0be0b1023dd11ec9c4c17d1804a8605c6135bb51
-EBUILD dracut-008.ebuild 5744 RMD160 164ad9849da18ff05acaf28b0033cd6670040378 SHA1 ff917591bbc2b8262731b21aaf616c98fa9720b0 SHA256 448f7370344e0c4327db320401c503d2376cd3ecca0184a487fa578e21b4db90
-EBUILD dracut-009-r1.ebuild 5911 RMD160 9ca9b6f32fbccb9f1b256d178da324c0408ec8cd SHA1 12d79150f7a8ad6e7f9117ba6c8618bcca1cd2bd SHA256 68ca1f5c20c6c7703c65f0bec02b6ffb9e8e143fd31823d2e4ed85b4212b400c
-MISC ChangeLog 6351 RMD160 340f839490fb189a3bafdcde6b302fa1302bdc9e SHA1 5f0dc7d89ab5810fef775bad2f74fae7a87b5e60 SHA256 5760d8a917261a274c73f1a90c00d0a7ee5318cb40b809a08944eb9951ee98de
+EBUILD dracut-007.ebuild 4817 RMD160 b9d983b8cdabc60e0cadf90f1405c76e88731cf8 SHA1 b20bb5f4ecf83aabf428a683d98d42cb3ea36db6 SHA256 6715e399fe0dafa868171a2239e4cca508396ffc09cdd8cb029930c07bef1fff
+EBUILD dracut-008-r1.ebuild 5832 RMD160 5a5f978f28be2cdef5f6df5782d623b25a417123 SHA1 6ec710509d56427941e00cf0bff6edf16d892f2a SHA256 95c03df493e91c716de5573a9a33134dd6a660a31ddbf8f9dbd7317b1d979ddc
+EBUILD dracut-008.ebuild 5745 RMD160 194d7b14c84d8411d49235a4359d6d2c6193cce6 SHA1 5346f7e5be40e78d57ec0dc2e0dcb326172a11ab SHA256 bd308a8caddf8737455439383931dd7275384e8814599a63c9eb76a0a165aa5f
+EBUILD dracut-009-r1.ebuild 5912 RMD160 6d0ca0bb0989d42700ecec4b2fea91be914861ff SHA1 121a9ea5bc03967b149b734db9de945c6213ca1c SHA256 620196708d1c6df83de5a433354c3c34062e031f9d06dba56887441b40b800a4
+MISC ChangeLog 6539 RMD160 b858c824806285223ca7edaa5fb9ccd6870d966b SHA1 bb3249440c1c3016ed9f2eff894d56fc37e8264b SHA256 75d3d728cda8a5a0e4e48a342ee2ad5c1f111fda4abbe02c12f51cceb268ff55
 MISC metadata.xml 1725 RMD160 39ad0c0c425b5422045655565f4fb4ac0b466ae8 SHA1 cf1a5835711f3cf7b5b25a49dc046d9493f1c6ea SHA256 572c681c3a7996183b74fe19a6da477dccc4184c6f0d0e7c0608f6909611048a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJNkgtwAAoJEPATRTHh2/q1F+EH/j/yiFetSHDpVzGvTw5qDmdz
-lVRdfysJ91Ngs2X+QrCD2bdv+6Q1+dJtBLOCyw4VtH/evtDTIkhW7UgNcvR/CmtF
-JfTW9zuU5YCrTsQJ/IqVSIwKh1nczLNA90rEHMCfOs2qoaO8kWctx3XJF0nQ9DaR
-fP/8XVA4VyzsxdppBtUbLWR3lg/fXq8SsZ/LIlSGZ7sO+pVGnuUxFcRlwy3lg4d7
-rcZ9YX5YIGE3UW4WqYXt+50TFDLx30E4tiqpcDzHJGjFUbgDvJObr7yI5bVJmiDO
-+54jEYkAkaCvlURz/jpLwySECcmH1GLGlItb2L5wAUvnR5mxso2LSrpcNCT0/CE=
-=A4Dl
+iF4EAREIAAYFAk2UnVkACgkQXkR9YqOcLPFR7gD7BuIPu5Dtq+lFI2bSWmskYhGp
+FdEoPfR/izzHs2WKTEEBAJXnDp121am3a/bOkdDMPgx6bUDpkNZLe7cWnHlPyvQA
+=bDAW
 -----END PGP SIGNATURE-----
