@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/dracut-007.ebuild,v 1.7 2011/03/21 12:39:05 aidecoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/dracut-007.ebuild,v 1.8 2011/03/31 15:26:33 ssuominen Exp $
 
 EAPI=2
 
@@ -38,7 +38,7 @@ RDEPEND="
 	crypt? ( sys-fs/cryptsetup ${DM_DEPS} )
 	debug? ( dev-util/strace )
 	dmraid? ( sys-fs/dmraid sys-fs/multipath-tools ${DM_DEPS} )
-	dmsquash-live? ( sys-apps/eject ${DM_DEPS} )
+	dmsquash-live? ( virtual/eject ${DM_DEPS} )
 	gensplash? ( media-gfx/splashutils )
 	iscsi? ( sys-block/open-iscsi[utils] ${NETWORK_DEPS} )
 	lvm? ( >=sys-fs/lvm2-2.02.33 )
